--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -12,15 +12,14 @@
 @import "@fontsource/space-grotesk/500.css";
 @import "@fontsource/space-grotesk/700.css";
 
-@layer base {
-  html {
-    font-family: var("--font-helvetica");
-  }
-}
 html,
 * {
   padding: 0;
   margin: 0;
+
+  @screen 2xl {
+    font-size: 20px;
+  }
 }
 @font-face {
   font-family: myFirstFont;
