--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -21,10 +21,22 @@ html,
     font-size: 20px;
   }
 }
+.text-base {
+  font-size: 1.12rem;
+  font-weight: 300;
+  /* letter-spacing: 0.9px; */
+}
+.text-lg {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+}
 @font-face {
   font-family: myFirstFont;
   src: url("./fonts/SofadiOne-Regular.ttf");
   font-weight: normal;
+}
+.notosan {
+  font-family: var(--font-notosan-tc);
 }
 
 .tiptap p.is-editor-empty:first-child::before {
@@ -67,7 +79,7 @@ html,
 }
 
 .tiptap h4 {
-  font-size: 1.15rem !important;
+  font-size: 1.2rem !important;
 }
 .tiptap h5 {
   font-size: 0.9rem;
