--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -22,13 +22,31 @@ html,
   }
 }
 .text-base {
-  font-size: 1.12rem;
-  font-weight: 300;
+  /* font-size: 1.05rem; */
+  font-weight: 400;
   /* letter-spacing: 0.9px; */
+}
+.font-medium {
+  font-weight: 500 !important;
+}
+@keyframes flipHorizontal {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(10deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+.flip-animation {
+  animation: flipHorizontal 3s infinite ease-in-out;
+  transform-style: preserve-3d; /* Enables 3D transformations */
 }
 .text-lg {
   font-size: 1.2rem;
-  line-height: 1.5rem;
+  /* line-height: 1.5rem; */
 }
 @font-face {
   font-family: myFirstFont;
